Tue Dec  8 10:48:04 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added Getter test to the test framework.

        * connectors/dds4ccm/tests/Getter/Base/Get_Invoker.idl:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
          Implemented get_many.

Tue Dec  8 09:05:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/USER_QOS_PROFILES.xml:
          Change QoS settings of test to generate  a on_sample_lost callback.

Tue Dec  8 08:56:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          RETCODE_NO_DATA should throw an exception since
          there always must be data after when the timeout does
          not occur.

        * connectors/dds4ccm/tests/Getter/descriptors/Plan.cdp:
          Removed qos_profile config property.

Tue Dec  8 08:47:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
          Resolved some timing issues between sender and receiver.

Tue Dec  8 08:17:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector.mpc:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver.mpc: